ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-ingress
  namespace: infra-prog-crypto
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: crypto.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crypto-frontend-service
                port:
                  number: 80
